# chain-trace

./: .gitignore  README.md  pyproject.toml
chain_trace/: cli.py  models.py
chain_trace/catalog/: addresses.json  loader.py
chain_trace/chains/bitcoin/: change_detect.py  fetcher.py
chain_trace/chains/ethereum/: classifier.py  fetcher.py  parser.py
chain_trace/commands/: config_cmd.py  label_cmd.py  session_cmd.py  trace_cmd.py  tx_cmd.py
chain_trace/db/: cache.py  connection.py  labels.py  prices.py  schema.sql  sessions.py
chain_trace/labels/: chainbase.py
chain_trace/output/: json_output.py  rich_tables.py
chain_trace/prices/: coingecko.py
chain_trace/scoring/: traceability.py
